<resources>
    <string name="join_as_screen_label">Join as</string>
    <string name="phone_verification_screen_label">Phone Verification</string>
    <string name="donor_details_screen_label">Donor Details</string>
    <string name="update_donor_screen_label">Update Details</string>

    <string name="txt_something_wrong">Something went wrong</string>
    <string name="txt_no_group_found">No near by group found!</string>
    <string name="txt_enable_phone_prmsn">Please enable phone permission in setting.</string>
    <string name="txt_save_success">Data Saved Successfully</string>
    <string name="txt_home">Home</string>
    <string name="txt_Needier">Needy List</string>
    <string name="txt_Needier_detail">Needy Detail</string>
    <string name="txt_no_internet">No Internet</string>
    <string name="txt_update_app">Update App</string>
    <string name="txt_maintenance">Maintenance</string>
    <string name="txt_member">Member List</string>
    <string name="txt_admin">Admin</string>
    <string name="txt_another_try">Give it another try</string>
    <string name="txt_reload">Reload</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_donor_greeting">Thanks for you contribution towards helping needy people.
        \n\n Now, near by NGO/foundation/group will contact you and pick the donated items form your location. You can also see and contact your near by groups.</string>
    <string name="txt_click_here">Locate Groups</string>
    <string name="txt_your_donation">Your donation</string>
    <string name="txt_your_visibility">Your Visibility</string>
    <string name="txt_visible">Visible</string>
    <string name="txt_invisible">Invisible</string>
    <string name="txt_no_data">No data available</string>
    <string name="splash_screen_title">Feed My City</string>
    <string name="donor_type_label">Donor</string>
    <string name="ngo_or_group_label">NGO/Group</string>
    <string name="tv_volunteer_label">Volunteer</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_number_label">Phone Number</string>
    <string name="verify_number_label">Send</string>
    <string name="resend_button_label">Resend</string>
    <string name="phone_verfication_info_label">By tapping \"Send\", an SMS may be sent. Message and data rates may apply.</string>
    <string name="code_verfication_label">Code Verification</string>
    <string name="verification_info_label">Enter six digit OTP send on your registered mobile</string>
    <string name="verify_button_label">Verify</string>
    <string name="name_label">Name</string>
    <string name="your_name_label">Your Name</string>
    <string name="help_info_label">How you can help?</string>
    <string name="radio_button_active">Active</string>
    <string name="radio_button_inactive">Inactive</string>
    <string name="allow_access_label">Allow location access</string>
    <string name="update_your_location">Update your location</string>
    <string name="my_location">My Location</string>
    <string name="save_button_label">Save</string>
    <string name="donor_address_hint">Address</string>
    <string name="update_button_label">Update</string>
    <string name="enter_name">Enter name</string>
    <string name="donation_items">Donation items</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_exit">Exit</string>

    <string name="menu_logout">Logout</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="location_permission_not_granted">Location Permission not granted</string>
    <string name="group_details_screen_label">Group Details</string>
    <string name="group_name_label">Group Name</string>
    <string name="registered_name_label">Registered Address</string>
    <string name="gvt_reg_number_label">Gvt. reg number (Optional)</string>
    <string name="profile_label">Profile</string>
    <string name="add_needy_label">Add Needy</string>
    <string name="needy_list_label">Needy List</string>
    <string name="add_member_label">Add Member</string>
    <string name="member_list_label">Member List</string>
    <string name="invite_member">Invite Member</string>
    <string name="sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="call_permission_not_granted">Call Permission not granted</string>
    <string name="txt_comments">Comments :</string>
    <string name="hint_add_comment">Add comment...</string>
    <string name="error_mandatory">Please enter input</string>
    <string name="txt_share_invite_link">Share Invite link</string>
    <string name="txt_join_group">Hey, Join FeedMyCity group to become helping hands for poor people. \n</string>
    <string name="txt_choose_one">Choose one</string>
    <string name="mobile_name_label">Mobile</string>
    <string name="what_is_needed_label">What is needed?</string>
    <string name="needier_details_screen_label">Needier Details</string>
    <string name="add_member_screen_label">Add Member</string>
    <string name="group_code_label">Group Code</string>
    <string name="phone_label">Phone</string>
    <string name="group_label">Group</string>
    <string name="profile_screen_label">Profile</string>
    <string name="donor_label">Donor</string>
    <string name="member_label">Member</string>
    <string name="needier_label">Needier</string>
    <string name="volunteer_screen_label">Locate NGO/Groups</string>
    <string name="volunteer_text_info">If you know someone needy around your region,
        you can call NGO/Local Groups marked on map. God bless your kind work.</string>

    <string name="hint_donation_item">For ex. 5 Kg wheat, 3 kg rice</string>
    <string name="hint_geo_location_address">Your Geo-location address</string>
    <string name="hint_donor_status">Your visibility status to public</string>
    <string name="hint_registered_address">Your Registered Address</string>

    <string name="intro_welcome_title">Welcome</string>
    <string name="intro_welcome_desc">This app connects NGO/group to donor and help delivering the food to Needy person. Your small donation can help a hungry to get food.</string>

    <string name="intro_group_title">Create a group</string>
    <string name="intro_group_desc">Create a group and add members that will pick food from donor and deliver it to needy people.</string>

    <string name="intro_donor_title">Join as a donor</string>
    <string name="intro_donor_desc">You can donate food/grocery and any eatables. Person from NGO/Group will pick that from your doorstep.</string>

    <string name="intro_volunteer_title">Join as volunteer</string>
    <string name="intro_volunteer_desc">Call your nearby group and inform about needy person near to you.</string>

    <string name="text_maintenance_title">FeedMyCity under maintenance</string>
    <string name="text_maintenance_message">Sorry for the inconvenience but We\'ll be up soon.</string>
    <string name="text_dont_ask_again">Don\'t ask again for this version.</string>
    <string name="text_please_wait">Please Wait...</string>
    <string name="button_skip">Skip</string>
</resources>
