<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_something_wrong"
        android:textSize="@dimen/font_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_another_try"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/txtReload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_reload"
        android:textSize="@dimen/font_normal"
        android:textColor="@color/colorAnchorLink"
        android:layout_marginTop="@dimen/spacing_normal" />

</LinearLayout>