<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.groupdetails.GroupDetailsActivity"
    android:padding="@dimen/spacing_large">

    <TextView
        android:id="@+id/tvName"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_name_label"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusedByDefault="true"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        android:layout_marginTop="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/tvGroupLabel"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/group_name_label"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <EditText
        android:id="@+id/etGroupInfo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ems="10"
        android:inputType="textPersonName|textCapWords"
        app:layout_constraintTop_toBottomOf="@+id/tvGroupLabel"
        android:layout_marginTop="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/tvRegisteredAddress"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/registered_name_label"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGroupInfo" />

    <EditText
        android:id="@+id/etRegisteredAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|textCapWords"
        android:maxLength="100"
        android:hint="@string/hint_registered_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisteredAddress"
        android:layout_marginTop="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/tvGvtRegNumber"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/gvt_reg_number_label"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRegisteredAddress" />

    <EditText
        android:id="@+id/etGvtRegNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:maxLength="100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGvtRegNumber"
        android:layout_marginTop="@dimen/spacing_normal" />

    <TextView
        android:id="@+id/tvAddress"
        style="@style/BlackText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/donor_address_hint"
        android:textSize="@dimen/font_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etGvtRegNumber" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine|textCapWords"
        android:maxLength="100"
        android:hint="@string/hint_geo_location_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@drawable/volunteer_bg"
        android:text="@string/save_button_label"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAddress" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>