<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_large"
    tools:context=".ui.groupdetails.GroupDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvName"
            style="@style/BlackText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:text="@string/name_label"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvMobileLabel"
            style="@style/BlackText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/mobile_name_label"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etName" />

        <EditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_normal"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@+id/tvMobileLabel" />

        <TextView
            android:id="@+id/tvWhatNeeded"
            style="@style/BlackText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/what_is_needed_label"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMobile" />

        <EditText
            android:id="@+id/etWhatNeeded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:ems="10"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:hint="@string/hint_donation_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWhatNeeded" />

        <TextView
            android:id="@+id/tvAddress"
            style="@style/BlackText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/donor_address_hint"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etWhatNeeded" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:hint="@string/hint_geo_location_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing_huge"
            android:background="@drawable/volunteer_bg"
            android:text="@string/save_button_label"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAddress" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>