<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.app_maintenance.ApiMaintenanceActivity"
    android:layout_margin="@dimen/spacing_small">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/webview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/maintenance">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center_horizontal"
            android:text="@string/text_maintenance_title"
            android:textSize="@dimen/font_xlarge"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:gravity="center_horizontal"
            android:text="@string/text_maintenance_message" />

    </LinearLayout>

    <Button
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/volunteer_bg"
        android:text="@string/txt_exit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/font_normal"
        android:layout_alignParentBottom="true" />


</RelativeLayout>