<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    tools:context="com.alfanse.feedmycity.ui.app_upgrade.AppUpgradeActivity">

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center_horizontal"
            android:text="@string/text_please_wait" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></WebView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbDontAskAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_ask_again" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xsmall"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_skip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/button_skip"
                    android:textColor="@color/color_green" />

                <Button
                    android:id="@+id/button_update_app"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/volunteer_bg"
                    android:text="@string/update_button_label"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_normal" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
